--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -93,7 +93,30 @@
         <div class="✨">
           <h2>Speakers</h2>
           <p>If you’re interested in giving a talk <a href="mailto:hello@roledrinks.com">let us know</a>!</p>
-          <p>No speakers have been announced yet.</p>
+          <p>We’re very grateful to our speakers:</p>
+
+          <ul class="👥 📢">
+            <li>
+              <a href="https://twitter.com/thoughtkettle">
+                <img src="/images/speakers/Sanja.jpg" alt="">
+                <div>
+                  <span>Sanja Bonic</span>
+                  <i>Exoscale</i>
+                </div>
+              </a>
+              <p>Sanja will talk about how assistive tech has found its way into smart homes and how to secure it.</p>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/kryptos_rsa">
+                <img src="/images/speakers/Almero.jpg" alt="">
+                <div>
+                  <span>Almero Steyn</span>
+                </div>
+              </a>
+              <p>Almero will tell us about building accessible apps in React and how to use react-axe.</p>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -105,7 +128,7 @@
           <ul class="👥">
             <li>
               <a href="https://twitter.com/iamhiwelo">
-                <img src="https://pbs.twimg.com/profile_images/811884623324127233/6_Hb0l_9_400x400.jpg" alt="">
+                <img src="https://pbs.twimg.com/profile_images/832147910913581056/Ng8PNKNl_400x400.jpg" alt="">
                 <div>
                   <span>Damien</span>
                   <i>raccoon.studio</i>
