Add first attendees for Bristol meetup

--- a/in/bristol/index.html
+++ b/in/bristol/index.html
@@ -106,7 +106,24 @@
           <h2>Attendees</h2>
           <p>If you want to yak about accessibility, sign up!</p>
 
-          <p>No attendees yet.</p>
+          <ul class="👥">
+            <li>
+              <a href="https://twitter.com/ianhamilton_">
+                <img src="https://pbs.twimg.com/profile_images/498088211172696064/U3_oZKJP_400x400.jpeg" alt="">
+                <div><span>Ian Hamilton</span></div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/MichielBijl">
+                <img src="/images/speakers/Michiel.jpg" alt="">
+                <div>
+                  <span>Michiel Bijl</span>
+                  <i><abbr title="The Paciello Group">TPG</abbr></i>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
