--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -74,16 +74,16 @@
           <h2>Details</h2>
           <p>
             <strong>So when is it?</strong> Saturday June 17th, 2017 👌🏾.<br>
-            <strong>Cool 🙌🏼 When does it end?</strong> 18:00, there usually is some sort of after-party though.<br>
-            <strong>Where is it 🤔?</strong> Amsterdam 🍻<br>
-            <strong>Costs?</strong> We will cover the venue, some snacks, and your first two drinks 👍🏿.
+            <strong>Cool 🙌🏼  When are we expected?</strong> It runs from 13:00 to 17:00. Dinner afterwards is an option, or we can move to imbibe elsewhere.<br>
+            <strong>Where is it 🤔?</strong> It's at <a href="http://cafevrijdagamsterdam.nl/">Café Vrijdag</a> in Amsterdam 🍻<br>
+            <strong>Costs?</strong> We will cover the venue, some snacks, and drinks up to a certain amount 👍🏿.
           </p>
 
           <p>
             Sounds good right?
             If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
             We also have a few people give a so called lightning talk—these are short talks that last anywhere between 5 and 10 minutes.
-            If all goes as planned, these lightning talks will start around 14:30.
+            If all goes as planned, these lightning talks will start around 14:00.
           </p>
           <p>All links for people go to their Twitter profile.</p>
         </div>
