Add bunch of people to Amsterdam meetup

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -116,6 +116,17 @@
               </a>
               <p>Almero will tell us about building accessible apps in React and how to use react-axe.</p>
             </li>
+
+            <li>
+              <a href="https://twitter.com/bramduvigneau">
+                <img src="https://pbs.twimg.com/profile_images/347645420/Bramavatar_400x400.jpg" alt="">
+                <div>
+                  <span>Bram Duvigneau</span>
+                  <i>Firm Ground</i>
+                </div>
+              </a>
+              <p>Probably something about PDFs, so get excited for that!</p>
+            </li>
           </ul>
         </div>
       </section>
@@ -127,8 +138,37 @@
 
           <ul class="👥">
             <li>
+              <a>
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>Anthea Steyn</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/bramduvigneau">
+                <img src="https://pbs.twimg.com/profile_images/347645420/Bramavatar_400x400.jpg" alt="">
+                <div>
+                  <span>Bram Duvigneau</span>
+                  <i>Firm Ground</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/chriscoyier">
+                <img src="https://pbs.twimg.com/profile_images/778921008979935232/5m0hKrUC_400x400.jpg" alt="">
+                <div>
+                  <span>Chris Coyier</span>
+                  <i>CSS Tricks &amp; CodePen</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/iamhiwelo">
-                <img src="https://pbs.twimg.com/profile_images/832147910913581056/Ng8PNKNl_400x400.jpg" alt="">
+                <img src="https://pbs.twimg.com/profile_images/854822444166766592/OrG0kCmk_400x400.jpg" alt="">
                 <div>
                   <span>Damien</span>
                   <i>raccoon.studio</i>
@@ -147,10 +187,29 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/deanbirkett">
+                <img src="https://pbs.twimg.com/profile_images/477351227865305088/QeF-TAJe_400x400.png" alt="">
+                <div>
+                  <span>Dean Birtkett</span>
+                  <i>AssistiveWare</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/hdv">
                 <img src="/images/attendees/Hidde.jpg" alt="">
                 <div>
                   <span>Hidde de Vries</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a>
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>Jan Scheepers</span>
                 </div>
               </a>
             </li>
@@ -166,11 +225,40 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/coffeemedia">
+                <img src="https://pbs.twimg.com/profile_images/3406407311/bbdcfcf19eda545f3caeb1622a05105c_400x400.png" alt="">
+                <div>
+                  <span>John Beitler</span>
+                  <i>Coffee Media</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/JulezRulez">
+                <img src="https://pbs.twimg.com/profile_images/617226329524674560/5xxW45pX_400x400.jpg" alt="">
+                <div>
+                  <span>Jules Ernst</span>
+                  <i>200OK</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/krijnhoetmer">
                 <img src="/images/attendees/Krijn.png" alt="">
                 <div>
                   <span>Krijn Hoetmer</span>
                   <i>Qontent</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/TalonWing">
+                <img src="https://pbs.twimg.com/profile_images/816369874360336385/05fXxSXh_400x400.jpg" alt="">
+                <div>
+                  <span>Leanne Scheepers</span>
                 </div>
               </a>
             </li>
@@ -186,11 +274,41 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/petervangrieken">
+                <img src="https://pbs.twimg.com/profile_images/640545706361659393/apswHUfK_400x400.jpg" alt="">
+                <div>
+                  <span>Peter van Grieken</span>
+                  <i>Frozen Rockets</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/rachelnabors">
+                <img src="https://pbs.twimg.com/profile_images/571472046526177280/FWHEBTvJ_400x400.jpeg" alt="">
+                <div>
+                  <span>Rachel 🦄Nabors</span>
+                  <i>Microsoft</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/vasilis">
                 <img src="https://pbs.twimg.com/profile_images/180609810/work-kills_400x400.jpg" alt="">
                 <div>
                   <span>Vasilis van Gemert</span>
                   <i>University of Applied Science, Amsterdam</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/vitallie">
+                <img src="https://pbs.twimg.com/profile_images/516578543/vincent_400x400.JPG" alt="">
+                <div>
+                  <span>Vincent van Itallie</span>
+                  <i></i>
                 </div>
               </a>
             </li>
