--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -138,6 +138,15 @@
 
           <ul class="👥">
             <li>
+              <a href="https://twitter.com/designbypxlgirl">
+                <img src="https://pbs.twimg.com/profile_images/835180377497079808/IwpLv6x2_400x400.jpg" alt="">
+                <div>
+                  <span>Agnieszka “pxlgirl” Czajkowska</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a>
                 <img src="/images/roledrinks-inverted.png" alt="">
                 <div>
