Add moar people

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -156,6 +156,15 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/mnatsian">
+                <img src="https://pbs.twimg.com/profile_images/806603136030953472/IQwmI0Zo_400x400.jpg" alt="">
+                <div>
+                  <span>Armen Mnatsian</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/bramduvigneau">
                 <img src="https://pbs.twimg.com/profile_images/347645420/Bramavatar_400x400.jpg" alt="">
                 <div>
@@ -234,6 +243,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/huijkman">
+                <img src="https://pbs.twimg.com/profile_images/570258404373073921/x3oHfoLI_400x400.jpeg" alt="">
+                <div>
+                  <span>Johan Huijkman</span>
+                  <i>Q42</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/coffeemedia">
                 <img src="https://pbs.twimg.com/profile_images/3406407311/bbdcfcf19eda545f3caeb1622a05105c_400x400.png" alt="">
                 <div>
@@ -298,6 +317,15 @@
                 <div>
                   <span>Rachel 🦄Nabors</span>
                   <i>Microsoft</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/usethetics">
+                <img src="https://pbs.twimg.com/profile_images/674318314575953920/qvZxrxD5_400x400.png" alt="">
+                <div>
+                  <span>Rogier Barendregt</span>
                 </div>
               </a>
             </li>
