--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -292,6 +292,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/stommepoes">
+                <img src="https://pbs.twimg.com/profile_images/846738501320294401/SYduWmdN_400x400.jpg" alt="">
+                <div>
+                  <span>Mallory van Achterberg</span>
+                  <i>¯\_(ツ)_/¯</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/MichielBijl">
                 <img src="/images/speakers/Michiel.jpg" alt="">
                 <div>
