Add more people

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -147,21 +147,31 @@
             </li>
 
             <li>
-              <a>
+              <div>
                 <img src="/images/roledrinks-inverted.png" alt="">
                 <div>
                   <span>Anthea Steyn</span>
                 </div>
-              </a>
+              </div>
             </li>
 
             <li>
-              <a href="https://twitter.com/mnatsian">
+              <div href="https://twitter.com/mnatsian">
                 <img src="https://pbs.twimg.com/profile_images/806603136030953472/IQwmI0Zo_400x400.jpg" alt="">
                 <div>
                   <span>Armen Mnatsian</span>
                 </div>
-              </a>
+              </div>
+            </li>
+
+            <li>
+              <div>
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>Blazej Misiak</span>
+                  <i>Zoopla</i>
+                </div>
+              </div>
             </li>
 
             <li>
@@ -224,12 +234,12 @@
             </li>
 
             <li>
-              <a>
+              <div>
                 <img src="/images/roledrinks-inverted.png" alt="">
                 <div>
                   <span>Jan Scheepers</span>
                 </div>
-              </a>
+              </div>
             </li>
 
             <li>
@@ -280,6 +290,16 @@
                   <i>Qontent</i>
                 </div>
               </a>
+            </li>
+
+            <li>
+              <div>
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>Laura Wilkinson</span>
+                  <i>Zoopla</i>
+                </div>
+              </div>
             </li>
 
             <li>
