Add Dean as speaker

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -127,6 +127,17 @@
               </a>
               <p>Probably something about PDFs, so get excited for that!</p>
             </li>
+
+            <li>
+              <a href="https://twitter.com/deanbirkett">
+                <img src="https://pbs.twimg.com/profile_images/477351227865305088/QeF-TAJe_400x400.png" alt="">
+                <div>
+                  <span>Dean Birkett</span>
+                  <i>AssistiveWare</i>
+                </div>
+              </a>
+              <p>Dean will talk about how AssistiveWare perform remote usability testing with AAC users.</p>
+            </li>
           </ul>
         </div>
       </section>
