Add image of Dean

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -130,7 +130,7 @@
 
             <li>
               <a href="https://twitter.com/deanbirkett">
-                <img src="https://pbs.twimg.com/profile_images/477351227865305088/QeF-TAJe_400x400.png" alt="">
+                <img src="/images/speakers/Dean.jpg" alt="">
                 <div>
                   <span>Dean Birkett</span>
                   <i>AssistiveWare</i>
