--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -245,6 +245,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/isabelanastasa">
+                <img src="https://pbs.twimg.com/profile_images/651811715957526528/pgf-sIwb_400x400.jpg" alt="">
+                <div>
+                  <span>Isabela Nastasa</span>
+                  <i>Diconium</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <div>
                 <img src="/images/roledrinks-inverted.png" alt="">
                 <div>
