Add Rob Lennartz

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -373,6 +373,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/Jirodica">
+                <img src="https://pbs.twimg.com/profile_images/859002684212424704/6Y7XZlS__400x400.jpg" alt="">
+                <div>
+                  <span>Rob Lennartz</span>
+                  <i>ING</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/usethetics">
                 <img src="https://pbs.twimg.com/profile_images/674318314575953920/qvZxrxD5_400x400.png" alt="">
                 <div>
