Add privacy page

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -26,7 +26,7 @@
             </svg>
             role=drinks
           </h1>
-          <p>We make <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices 🍻</p>
+          <p>We make <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices 🍻</p>
           <p>
             What on Earth is a role=drinks?
             It’s an accessibility meetup!
@@ -437,6 +437,7 @@
     <footer>
       <div class="✨">
         <p>Part of <a href="http://roledrinks.com">role=drinks</a>.</p>
+        <p>Some things we’ve to say <a href="privacy.html">about privacy</a>.</p>
       </div>
     </footer>
 
