--- a/in/amsterdam/2016-06-18.html
+++ b/in/amsterdam/2016-06-18.html
@@ -26,7 +26,7 @@
             </svg>
             role=drinks
           </h1>
-          <p>We make <a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices 🍻</p>
+          <p>We make <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices 🍻</p>
           <p>
             What on Earth is a role=drinks?
             It’s an accessibility meetup!
