Add all avatars as static images

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -119,7 +119,7 @@
 
             <li>
               <a href="https://twitter.com/bramduvigneau">
-                <img src="https://pbs.twimg.com/profile_images/347645420/Bramavatar_400x400.jpg" alt="">
+                <img src="/images/attendees/Bram-Duvigneau.jpg" alt="">
                 <div>
                   <span>Bram Duvigneau</span>
                   <i>Firm Ground</i>
@@ -150,7 +150,7 @@
           <ul class="👥">
             <li>
               <a href="https://twitter.com/designbypxlgirl">
-                <img src="https://pbs.twimg.com/profile_images/835180377497079808/IwpLv6x2_400x400.jpg" alt="">
+                <img src="/images/attendees/pxlgirl.jpg" alt="">
                 <div>
                   <span>Agnieszka “pxlgirl” Czajkowska</span>
                 </div>
@@ -167,12 +167,12 @@
             </li>
 
             <li>
-              <div href="https://twitter.com/mnatsian">
-                <img src="https://pbs.twimg.com/profile_images/806603136030953472/IQwmI0Zo_400x400.jpg" alt="">
+              <a href="https://twitter.com/mnatsian">
+                <img src="/images/attendees/Armen-Mnatsian.jpg" alt="">
                 <div>
                   <span>Armen Mnatsian</span>
                 </div>
-              </div>
+              </a>
             </li>
 
             <li>
@@ -187,7 +187,7 @@
 
             <li>
               <a href="https://twitter.com/bramduvigneau">
-                <img src="https://pbs.twimg.com/profile_images/347645420/Bramavatar_400x400.jpg" alt="">
+                <img src="/images/attendees/Bram-Duvigneau.jpg" alt="">
                 <div>
                   <span>Bram Duvigneau</span>
                   <i>Firm Ground</i>
@@ -197,7 +197,7 @@
 
             <li>
               <a href="https://twitter.com/chriscoyier">
-                <img src="https://pbs.twimg.com/profile_images/778921008979935232/5m0hKrUC_400x400.jpg" alt="">
+                <img src="/images/attendees/Chris-Coyier.jpg" alt="">
                 <div>
                   <span>Chris Coyier</span>
                   <i>CSS Tricks &amp; CodePen</i>
@@ -207,7 +207,7 @@
 
             <li>
               <a href="https://twitter.com/iamhiwelo">
-                <img src="https://pbs.twimg.com/profile_images/854822444166766592/OrG0kCmk_400x400.jpg" alt="">
+                <img src="/images/attendees/Damien.jpg" alt="">
                 <div>
                   <span>Damien</span>
                   <i>raccoon.studio</i>
@@ -217,7 +217,7 @@
 
             <li>
               <a href="https://twitter.com/Danichan_webdev">
-                <img src="https://pbs.twimg.com/profile_images/787208660229484544/gYTdXt3N_400x400.jpg" alt="">
+                <img src="/images/attendees/Daniel-Koster.jpg" alt="">
                 <div>
                   <span>Daniel Koster</span>
                   <i>My1stWebsite</i>
@@ -227,7 +227,7 @@
 
             <li>
               <a href="https://twitter.com/deanbirkett">
-                <img src="https://pbs.twimg.com/profile_images/477351227865305088/QeF-TAJe_400x400.png" alt="">
+                <img src="/images/speakers/Dean.jpg" alt="">
                 <div>
                   <span>Dean Birtkett</span>
                   <i>AssistiveWare</i>
@@ -246,7 +246,7 @@
 
             <li>
               <a href="https://twitter.com/isabelanastasa">
-                <img src="https://pbs.twimg.com/profile_images/651811715957526528/pgf-sIwb_400x400.jpg" alt="">
+                <img src="/images/attendees/Isabela.jpg" alt="">
                 <div>
                   <span>Isabela Nastasa</span>
                   <i>Diconium</i>
@@ -275,7 +275,7 @@
 
             <li>
               <a href="https://twitter.com/huijkman">
-                <img src="https://pbs.twimg.com/profile_images/570258404373073921/x3oHfoLI_400x400.jpeg" alt="">
+                <img src="/images/attendees/Johan-Huijkman.jpeg" alt="">
                 <div>
                   <span>Johan Huijkman</span>
                   <i>Q42</i>
@@ -285,7 +285,7 @@
 
             <li>
               <a href="https://twitter.com/coffeemedia">
-                <img src="https://pbs.twimg.com/profile_images/3406407311/bbdcfcf19eda545f3caeb1622a05105c_400x400.png" alt="">
+                <img src="/images/attendees/John-Beitler.png" alt="">
                 <div>
                   <span>John Beitler</span>
                   <i>Coffee Media</i>
@@ -295,7 +295,7 @@
 
             <li>
               <a href="https://twitter.com/JulezRulez">
-                <img src="https://pbs.twimg.com/profile_images/617226329524674560/5xxW45pX_400x400.jpg" alt="">
+                <img src="/images/attendees/Jules-Ernst.jpg" alt="">
                 <div>
                   <span>Jules Ernst</span>
                   <i>200OK</i>
@@ -325,7 +325,7 @@
 
             <li>
               <a href="https://twitter.com/TalonWing">
-                <img src="https://pbs.twimg.com/profile_images/816369874360336385/05fXxSXh_400x400.jpg" alt="">
+                <img src="/images/attendees/Leanne-Scheepers.jpg" alt="">
                 <div>
                   <span>Leanne Scheepers</span>
                 </div>
@@ -334,7 +334,7 @@
 
             <li>
               <a href="https://twitter.com/stommepoes">
-                <img src="https://pbs.twimg.com/profile_images/846738501320294401/SYduWmdN_400x400.jpg" alt="">
+                <img src="/images/attendees/Mallory.jpg" alt="">
                 <div>
                   <span>Mallory van Achterberg</span>
                   <i>¯\_(ツ)_/¯</i>
@@ -354,7 +354,7 @@
 
             <li>
               <a href="https://twitter.com/petervangrieken">
-                <img src="https://pbs.twimg.com/profile_images/640545706361659393/apswHUfK_400x400.jpg" alt="">
+                <img src="/images/attendees/Peter-van-Grieken.jpg" alt="">
                 <div>
                   <span>Peter van Grieken</span>
                   <i>Frozen Rockets</i>
@@ -364,9 +364,9 @@
 
             <li>
               <a href="https://twitter.com/rachelnabors">
-                <img src="https://pbs.twimg.com/profile_images/571472046526177280/FWHEBTvJ_400x400.jpeg" alt="">
+                <img src="/images/attendees/Rachel-Nabors.jpeg" alt="">
                 <div>
-                  <span>Rachel 🦄Nabors</span>
+                  <span>Rachel Nabors</span>
                   <i>Microsoft</i>
                 </div>
               </a>
@@ -374,7 +374,7 @@
 
             <li>
               <a href="https://twitter.com/Jirodica">
-                <img src="https://pbs.twimg.com/profile_images/859002684212424704/6Y7XZlS__400x400.jpg" alt="">
+                <img src="/images/attendees/Rob-Lennartz.jpg" alt="">
                 <div>
                   <span>Rob Lennartz</span>
                   <i>ING</i>
@@ -384,7 +384,7 @@
 
             <li>
               <a href="https://twitter.com/usethetics">
-                <img src="https://pbs.twimg.com/profile_images/674318314575953920/qvZxrxD5_400x400.png" alt="">
+                <img src="/images/attendees/Rogier-Barendregt.png" alt="">
                 <div>
                   <span>Rogier Barendregt</span>
                 </div>
@@ -393,7 +393,7 @@
 
             <li>
               <a href="https://twitter.com/vasilis">
-                <img src="https://pbs.twimg.com/profile_images/180609810/work-kills_400x400.jpg" alt="">
+                <img src="/images/attendees/Vasilis-van-Gemert.jpg" alt="">
                 <div>
                   <span>Vasilis van Gemert</span>
                   <i>University of Applied Science, Amsterdam</i>
@@ -403,10 +403,9 @@
 
             <li>
               <a href="https://twitter.com/vitallie">
-                <img src="https://pbs.twimg.com/profile_images/516578543/vincent_400x400.JPG" alt="">
+                <img src="/images/attendees/Vincent-van-Itallie.JPG" alt="">
                 <div>
                   <span>Vincent van Itallie</span>
-                  <i></i>
                 </div>
               </a>
             </li>
