Fix privacy link

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -436,7 +436,7 @@
     <footer>
       <div class="✨">
         <p>Part of <a href="http://roledrinks.com">role=drinks</a>.</p>
-        <p>Some things we’ve to say <a href="privacy.html">about privacy</a>.</p>
+        <p>Some things we’ve to say <a href="/privacy.html">about privacy</a>.</p>
       </div>
     </footer>
 
