--- a/privacy.html
+++ b/privacy.html
@@ -74,7 +74,7 @@
                 <li>If anyone is in the know about this please let us know.</li>
               </ul>
             </li>
-            <li>roledrinks.com uses a SSL certificate from <a href="https://letsencrypt.org">Let’s Encrypt</a>.</li>
+            <li>roledrinks.com uses a <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security">SSL certificate</a> from <a href="https://letsencrypt.org">Let’s Encrypt</a>.</li>
             <li>
               This is tied up to GitHub Pages with <a href="https://www.cloudflare.com">CloudFlare</a>.
               <ul>
@@ -109,7 +109,7 @@
     <footer>
       <div class="✨">
         <p>Built while under the influence of whisky. You can <a href="https://twitter.com/roledrinks">share a drink with us on Twitter</a>.</p>
-        <p>Some things we’ve to say <a href="privacy.html">about privacy</a>.</p>
+        <p>Some things we’ve to say <a href="/privacy.html">about privacy</a>.</p>
       </div>
     </footer>
 
