--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <footer>
       <div class="✨">
         <p>Built while under the influence of whisky. You can <a href="https://twitter.com/roledrinks">share a drink with us on Twitter</a>.</p>
-        <p>Some things we’ve to say <a href="privacy.html">about privacy</a>.</p>
+        <p>Some things we’ve to say <a href="/privacy.html">about privacy</a>.</p>
       </div>
     </footer>
 
