Add attendees remove Sanja 😭

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -96,7 +96,7 @@
           <p>We’re very grateful to our speakers:</p>
 
           <ul class="👥 📢">
-            <li>
+            <!-- <li>
               <a href="https://twitter.com/thoughtkettle">
                 <img src="/images/speakers/Sanja.jpg" alt="">
                 <div>
@@ -105,7 +105,7 @@
                 </div>
               </a>
               <p>Sanja will talk about how assistive tech has found its way into smart homes and how to secure it.</p>
-            </li>
+            </li> -->
 
             <li>
               <a href="https://twitter.com/kryptos_rsa">
@@ -294,11 +294,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/JulezRulez">
-                <img src="/images/attendees/Jules-Ernst.jpg" alt="">
+              <a href="https://twitter.com/jpdevries">
+                <img src="/images/attendees/jp-de-vries.jpg" alt="">
                 <div>
-                  <span>Jules Ernst</span>
-                  <i>200OK</i>
+                  <span>JP de Vries</span>
                 </div>
               </a>
             </li>
@@ -406,6 +405,16 @@
                 <img src="/images/attendees/Vincent-van-Itallie.JPG" alt="">
                 <div>
                   <span>Vincent van Itallie</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/wilcofiers">
+                <img src="/images/attendees/Wilco-Fiers.jpg" alt="">
+                <div>
+                  <span>Wilco Fiers</span>
+                  <i>Deque</i>
                 </div>
               </a>
             </li>
