Fix Birkett's last name

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -229,7 +229,7 @@
               <a href="https://twitter.com/deanbirkett">
                 <img src="/images/speakers/Dean.jpg" alt="">
                 <div>
-                  <span>Dean Birtkett</span>
+                  <span>Dean Birkett</span>
                   <i>AssistiveWare</i>
                 </div>
               </a>
