--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -236,6 +236,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/SwissWebMiss">
+                <img src="/images/attendees/Heidi-Olsen.jpg" alt="">
+                <div>
+                  <span>Heidi Olsen</span>
+                  <i>eROI</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/hdv">
                 <img src="/images/attendees/Hidde.jpg" alt="">
                 <div>
