--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -392,6 +392,15 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/rodneyrehm">
+                <img src="/images/attendees/Rodney-Rehm.jpeg" alt="">
+                <div>
+                  <span>Rodney Rehm</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/usethetics">
                 <img src="/images/attendees/Rogier-Barendregt.png" alt="">
                 <div>
