Add Agnieszka to the speaker list

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -108,6 +108,16 @@
             </li> -->
 
             <li>
+              <a href="https://twitter.com/designbypxlgirl">
+                <img src="/images/attendees/pxlgirl.jpg" alt="">
+                <div>
+                  <span>Agnieszka “pxlgirl” Czajkowska</span>
+                </div>
+              </a>
+              <p>Agnieszka has a thing or two to say about “Pretty Accessible 2.0”</p>
+            </li>
+
+            <li>
               <a href="https://twitter.com/kryptos_rsa">
                 <img src="/images/speakers/Almero.jpg" alt="">
                 <div>
