--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -275,6 +275,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/JakeAbma">
+                <img src="/images/attendees/Jake-Abma.jpg" alt="">
+                <div>
+                  <span>Jake Abma</span>
+                  <i>ING</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <div>
                 <img src="/images/roledrinks-inverted.png" alt="">
                 <div>
