Add a bunch of people

--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -186,6 +186,15 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/fliptheweb">
+                <img src="/images/attendees/Artur-Kornakov.jpg" alt="">
+                <div>
+                  <span>Artur Kornakov</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <div>
                 <img src="/images/roledrinks-inverted.png" alt="">
                 <div>
@@ -211,6 +220,16 @@
                 <div>
                   <span>Chris Coyier</span>
                   <i>CSS Tricks &amp; CodePen</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/dalefishmcc">
+                <img src="/images/attendees/Dale-McConnell.jpg" alt="">
+                <div>
+                  <span>Dale McConnell</span>
+                  <i>Suitsupply</i>
                 </div>
               </a>
             </li>
@@ -377,6 +396,16 @@
                 <div>
                   <span>Michiel Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/polyester">
+                <img src="/images/attendees/Paul-Roeland.jpg" alt="">
+                <div>
+                  <span>Paul Roeland</span>
+                  <i>Plone</i>
                 </div>
               </a>
             </li>
