--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -108,6 +108,17 @@
             </li> -->
 
             <li>
+              <a href="https://twitter.com/swisswebmiss">
+                <img src="/images/attendees/swisswebmiss.jpg" alt="">
+                <div>
+                  <span>Heidi Olsen</span>
+                  <i>Eroi</i>
+                </div>
+              </a>
+              <p>Heidi will tell us about 5 pro tips to make your e-mail more accessible</p>
+            </li>
+            
+            <li>
               <a href="https://twitter.com/designbypxlgirl">
                 <img src="/images/attendees/pxlgirl.jpg" alt="">
                 <div>
