--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -109,7 +109,7 @@
 
             <li>
               <a href="https://twitter.com/swisswebmiss">
-                <img src="/images/attendees/swisswebmiss.jpg" alt="">
+                <img src="/images/attendees/Heidi-Olsen.png" alt="">
                 <div>
                   <span>Heidi Olsen</span>
                   <i>Eroi</i>
