--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -115,7 +115,7 @@
                   <i>Eroi</i>
                 </div>
               </a>
-              <p>Heidi will tell us about 5 pro tips to make your e-mail more accessible</p>
+              <p>Heidi will tell us about 5 pro tips to make your e-mail more accessible.</p>
             </li>
             
             <li>
@@ -125,7 +125,7 @@
                   <span>Agnieszka “pxlgirl” Czajkowska</span>
                 </div>
               </a>
-              <p>Agnieszka has a thing or two to say about “Pretty Accessible 2.0”</p>
+              <p>Agnieszka has a thing or two to say about “Pretty Accessible 2.0”.</p>
             </li>
 
             <li>
