--- a/in/amsterdam/index.html
+++ b/in/amsterdam/index.html
@@ -497,6 +497,17 @@
                 </div>
               </a>
             </li>
+
+            <li>
+              <a href="https://twitter.com/zersiax">
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>Florian Beijers</span>
+                </div>
+              </a>
+            </li>
+            
+            
           </ul>
         </div>
       </section>
