Update pages and add home link

--- a/in/amsterdam/2017-06-17.html
+++ b/in/amsterdam/2017-06-17.html
@@ -21,10 +21,12 @@
       <div class="✨">
         <div>
           <h1>
-            <svg viewBox="0 0 120 120" class="♿️" aria-hidden="true">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#role-drinks"></use>
-            </svg>
-            role=drinks
+            <a href="/">
+              <svg viewBox="0 0 120 120" class="♿️" aria-label="role=drinks logo">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#role-drinks"></use>
+              </svg>
+              role=drinks
+            </a>
           </h1>
           <p>We make <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices 🍻</p>
           <p>
@@ -36,6 +38,10 @@
         <svg viewBox="0 0 120 120" class="♿️" aria-label="role=drinks logo">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#role-drinks"></use>
         </svg>
+      </div>
+
+      <div class="ℹ️">
+        <p>This is a past event; <a href="https://twitter.com/roledrinks">we announce drinking plans on Twitter</a>.</p>
       </div>
     </header>
 
